--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,3 +58,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.2.1'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
 }
+dependencies {
+    compile 'com.android.support:support-v4:25.+'
+}
